fix: Aligned to debt-positions openApi